--- a/index.html
+++ b/index.html
@@ -8,22 +8,30 @@
 </head>
 <body>
     <div class="header">
-     <h1>Cards printing deluxe</h1>
-     <img class="icon" src="../OP_landing_page-gaurel/images/card_icons.png">
-     <div class="links"> 
-        <ul>
-            <li>Store</li>
-            <li>FAQ</li>
-            <li>Contact</li>
-            <li>About Us</li>
-        </ul>
+        <div class="title_left">   
+            <h1 class="title">Cards printing deluxe</h1>
+            <img class="icon" src="../OP_landing_page-gaurel/images/card_icons.png">
+        </div>
+        <div class="links"> 
+            <ul>
+                <li>Store</li>
+                <li>FAQ</li>
+                <li>Contact</li>
+                <li>About Us</li>
+            </ul>
      </div>
     </div>
     <div class="introduction">
-        <div class="text_box">We are the printing company situated in Slovakia, which focuses on helping with both individual and industry printing of card decks with variable quality.</div>    
+        <div class="introduction_left">
+            <div class="yell_text">Approved by proffesional casino players!</div>
+            <div class="text_box"><p>We are a printing company situated in Slovakia. Our focus lies in printing two-sided cards decks, both in bulk and for the individuals.</p></div>    
+            <div class="button">Sign in</div>
+        </div>
+        <img class="printing_press" src="../OP_landing_page-gaurel/images/pexels-antoni-shkraba-6620993.png">
+        </div>
     </div>
     <div class="show_off"></div>
-        <h2 class="images_title"></h2>
+        <h2 class="images_title">See for yourself!</h2>
         <div class="images"></div>
     <div class="quote_block">
         <p class="Quote">"I really wanted to make a playing cards deck to my family, using our extended family tree. Cards printing Deluxe provided me with a way to make it happen! They did all the gnarly technological detail as well, which was quite advanteous since I do not know PCs too well! Now everyone in my family can enjoy our own playing deck, especially during gathering where we will whip it out and play poker!</p>
@@ -35,6 +43,8 @@
     <div class="footer">
     <p class="image_sources"><a href="https://www.flaticon.com/free-icons/card-game" title="Card game icons">Card game icons created by mangsaabguru - Flaticon</a>
     </p>
+    <p>Copyright @ Aurel's Hell</p>
+    <p>Images obtained from Pexels.</p>
     </div>
 </body>
 </html>
