finished entire page

--- a/index.html
+++ b/index.html
@@ -27,24 +27,40 @@
             <div class="text_box"><p>We are a printing company situated in Slovakia. Our focus lies in printing two-sided cards decks, both in bulk and for the individuals.</p></div>    
             <div class="button">Sign in</div>
         </div>
-        <img class="printing_press" src="../OP_landing_page-gaurel/images/pexels-antoni-shkraba-6620993.png">
+        <img class="printing_press" src="../OP_landing_page-gaurel/images/pexels-antoni-shkraba-6620993.png" alt="image of printing press.">
         </div>
     </div>
-    <div class="show_off"></div>
-        <h2 class="images_title">See for yourself!</h2>
-        <div class="images"></div>
+    <div class="show_off">
+            <h2 class="images_title">See for yourself!</h2>
+            <div class="images">
+                <img class="show_off_img" src="./images/pexels-cottonbro-studio-7179806.jpg">
+                <img class="show_off_img" src="./images/pexels-dilara-irem-14659553.jpg">
+                <img class="show_off_img" src="./images/pexels-mali-maeder-102107.jpg">
+                <img class="show_off_img" src="./images/pexels-pixabay-39018.jpg">
+            </div>
+            <div class="img_desc">
+                <p class="img_desc_t">High Quality!</p>
+                <p class="img_desc_t">Respectfully recreate classics!</p>
+                <p class="img_desc_t">Smooth playing cards!</p>
+                <p class="img_desc_t">Respectable longetivity and durability!</p>
+            </div>
+    </div>
     <div class="quote_block">
         <p class="Quote">"I really wanted to make a playing cards deck to my family, using our extended family tree. Cards printing Deluxe provided me with a way to make it happen! They did all the gnarly technological detail as well, which was quite advanteous since I do not know PCs too well! Now everyone in my family can enjoy our own playing deck, especially during gathering where we will whip it out and play poker!</p>
+        <p class="quote_name"> - John Carrot</p>
     </div>
     <div class="calculator">
-        <p>Explore size and material options and put them all into convenient calculator, to calculate aproximate price!</p>
+        <div class="calculator_text">
+            <p class="calc_text_tit">Put your deck together!</p>
+            <p class="calc_text">Explore size and material options and put them all into convenient calculator, to calculate aproximate price!</p>
+        </div>
         <div class="button">Explore options</div>
     </div>
     <div class="footer">
-    <p class="image_sources"><a href="https://www.flaticon.com/free-icons/card-game" title="Card game icons">Card game icons created by mangsaabguru - Flaticon</a>
-    </p>
-    <p>Copyright @ Aurel's Hell</p>
-    <p>Images obtained from Pexels.</p>
+        <p class="image_sources"><a href="https://www.flaticon.com/free-icons/card-game" title="Card game icons">Card game icons created by mangsaabguru - Flaticon</a>
+        </p>
+        <p>Copyright @ Aurel's Hell</p>
+        <p>Images obtained from Pexels.</p>
     </div>
 </body>
 </html>
